# tt-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  index.html
components/agents/crates/tt-rs-robot/: Cargo.toml
components/agents/crates/tt-rs-robot/src/: widget_impl.rs
components/app/: Cargo.toml  README.md
components/app/crates/tt-rs-app/: Cargo.toml  Trunk.toml  index.html
components/app/crates/tt-rs-app/assets/puzzles/: puzzle-fill-box.json  puzzle-make-four.json  puzzle-make-nine.json  tutorial-add-numbers.json  tutorial-copy-widget.json  tutorial-fill-box.json
components/app/crates/tt-rs-app/assets/styles/: main.css
components/app/crates/tt-rs-app/src/: app.rs  demo.rs  demo_ops.rs  demo_runner.rs  lib.rs  routing.rs  state.rs
components/app/crates/tt-rs-app/src/app/: mod.rs  render.rs
components/app/crates/tt-rs-app/src/app/callbacks/: box_handlers.rs  keydown.rs  mod.rs  widget_handlers.rs
components/app/crates/tt-rs-app/src/box_state/: mod.rs  render.rs  state.rs
components/app/crates/tt-rs-app/src/ops/: bird_ops.rs  box_hole.rs  box_ops.rs  dropzone_ops.rs  mod.rs  number_ops.rs  robot_ops.rs  scales_ops.rs  vacuum_ops.rs  wand_ops.rs
components/app/crates/tt-rs-app/src/robot_exec/: actions.rs  executor.rs  mod.rs  path_parse.rs
components/app/crates/tt-rs-app/src/widget_item/: mod.rs  render.rs  tooltip.rs
components/app/crates/tt-rs-app/src/workspace/: data.rs  mod.rs  puzzles.rs  serialize.rs  tests.rs
components/app/scripts/: build.sh  serve.sh
components/comparison/: Cargo.toml
components/comparison/crates/tt-rs-scales/: Cargo.toml
components/comparison/crates/tt-rs-scales/src/: widget_impl.rs
components/comparison/crates/tt-rs-scales/src/scales/: mod.rs  mutators.rs
components/comparison/scripts/: build.sh
components/containers/crates/tt-rs-dropzone/: Cargo.toml
components/containers/crates/tt-rs-dropzone/src/: dropzone.rs  lib.rs  ops.rs  rendering.rs  widget_impl.rs
components/containers/crates/tt-rs-nest/: Cargo.toml
components/containers/crates/tt-rs-nest/src/: lib.rs  mutators.rs  nest.rs  ops.rs  rendering.rs  widget_impl.rs
components/core/: Cargo.toml  README.md
components/core/crates/tt-rs-core/src/: lib.rs  widget_id.rs  widget_trait.rs
components/core/scripts/: build.sh
components/dnd/: Cargo.toml  README.md
components/dnd/crates/tt-rs-drag/: Cargo.toml
components/dnd/crates/tt-rs-drag/src/: copy_source.rs  draggable.rs  lib.rs
components/dnd/crates/tt-rs-ui/: Cargo.toml  build.rs
components/dnd/crates/tt-rs-ui/src/: accordion.rs  confirm_dialog.rs  demo_cursor.rs  footer.rs  help_button.rs  help_panel.rs  lib.rs  slide_panel.rs  text_pane.rs  tooltip.rs  tooltip_layer.rs  user_level.rs  workspace_button.rs
components/dnd/crates/tt-rs-ui/src/help_panel/: advanced.rs  basics.rs  messaging.rs  mod.rs
components/dnd/crates/tt-rs-ui/src/workspace_menu/: list.rs  mod.rs  save_form.rs
components/dnd/scripts/: build.sh
components/tools/crates/tt-rs-wand/: Cargo.toml
components/tools/crates/tt-rs-wand/src/: wand.rs
components/widgets/: Cargo.toml  README.md
components/widgets/crates/tt-rs-box/: Cargo.toml
components/widgets/crates/tt-rs-box/src/: hole.rs  lib.rs  mutators.rs  ops.rs  rendering.rs  tests.rs  toon_box.rs  widget_impl.rs
components/widgets/crates/tt-rs-box/src/tests/: creation.rs  mod.rs  resize.rs
components/widgets/crates/tt-rs-box/tests/: box_tests.rs  pattern_tests.rs
components/widgets/crates/tt-rs-number/src/: accessors.rs  arithmetic.rs  builders.rs  lib.rs  number.rs  operator.rs  ops.rs  rendering.rs  widget_impl.rs
components/widgets/crates/tt-rs-number/tests/: number_tests.rs  pattern_tests.rs
components/widgets/crates/tt-rs-robot/src/: lib.rs  robot.rs
components/widgets/crates/tt-rs-robot/src/robot/: mod.rs  mutators.rs  ops.rs  types.rs
components/widgets/crates/tt-rs-scales/src/: lib.rs  scales.rs  widget_impl.rs
components/widgets/crates/tt-rs-scales/src/scales/: ops.rs
components/widgets/crates/tt-rs-text/src/: lib.rs  ops.rs  text.rs
components/widgets/crates/tt-rs-vacuum/: Cargo.toml
components/widgets/crates/tt-rs-vacuum/src/: vacuum.rs
components/widgets/crates/tt-rs-wand/src/: lib.rs  widget_impl.rs
components/widgets/scripts/: build.sh
crates/tt-rs-app/: Cargo.toml
crates/tt-rs-app/src/: app.rs
crates/tt-rs-drag/: Cargo.toml
crates/tt-rs-drag/src/: draggable.rs  lib.rs  position.rs
docs/: index.html  main-2a4fe588f7f196db.css  main-58794b5fa3460d98.css  main-ae487cba75e01d39.css  main-c3a6394658d620f7.css  main-cac1cbbe47aa4449.css  main-f9999217cbd2fb47.css  sw.js  tt-rs-12a8362c2862a88.js  tt-rs-12a8362c2862a88_bg.wasm  tt-rs-app-1994171e71bf4f2b.js  tt-rs-app-1994171e71bf4f2b_bg.wasm  tt-rs-app-1b4bd1ce6c9d2450.js  tt-rs-app-1b4bd1ce6c9d2450_bg.wasm  tt-rs-app-231a4cddb7627aa2.js  tt-rs-app-231a4cddb7627aa2_bg.wasm  tt-rs-app-253fbadcb4f77782.js  tt-rs-app-253fbadcb4f77782_bg.wasm  tt-rs-app-2af4fd358bc9c386.js  tt-rs-app-2af4fd358bc9c386_bg.wasm  tt-rs-app-2df660e14fee6344.js  tt-rs-app-2df660e14fee6344_bg.wasm  tt-rs-app-3c3172e0b40260fe.js  tt-rs-app-3c3172e0b40260fe_bg.wasm  tt-rs-app-44cc83e32f4eb901.js  tt-rs-app-44cc83e32f4eb901_bg.wasm  tt-rs-app-5302b9a0d8b89da1.js  tt-rs-app-5302b9a0d8b89da1_bg.wasm  tt-rs-app-56ab9f78609aa795.js  tt-rs-app-56ab9f78609aa795_bg.wasm  tt-rs-app-5cf9327c8f0d4685.js  tt-rs-app-5cf9327c8f0d4685_bg.wasm  tt-rs-app-61240366cb34bc41.js  tt-rs-app-61240366cb34bc41_bg.wasm  tt-rs-app-66f7ec8074d20413.js  tt-rs-app-66f7ec8074d20413_bg.wasm  tt-rs-app-67261cfe94b4c0a6.js  tt-rs-app-67261cfe94b4c0a6_bg.wasm  tt-rs-app-6cc3e922d65ab156.js  tt-rs-app-6cc3e922d65ab156_bg.wasm  (+35 more)
documentation/: ai_agent_instructions.md  ai_process.md  architecture.md  avatars.md  challenges.md  design.md  deviations.md  examples.md  learnings.md  physical-design.md  plan.md  prd.md  process.md  refactoring-plan.md  roadmap.md  tools.md  tutorials-roadmap.md  tutorials.md  use-cases.md
scripts/: build-all.sh  build-release.sh  check-all.sh  check-changelog.sh  serve.sh  (+6 more)
(+81 files in other folders)
