[workspace]
resolver = "2"
members = [
    "crates/tt-rs-core",
    "crates/tt-rs-number",
    "crates/tt-rs-text",
    "crates/tt-rs-box",
    "crates/tt-rs-drag",
    "crates/tt-rs-ui",
    "crates/tt-rs-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/wrightmikea/tt-rs"

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "MouseEvent",
    "Node",
    "Window",
] }
log = "0.4"
wasm-logger = "0.2"

[profile.release]
opt-level = "s"
lto = true
