[workspace]
resolver = "2"
members = [
    "crates/tt-rs-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/wrightmikea/tt-rs"

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }

[profile.release]
opt-level = "s"
lto = true
