[package]
name = "tt-rs-app"
description = "tt-rs WASM application entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tt-rs-core = { path = "../tt-rs-core" }
tt-rs-number = { path = "../tt-rs-number" }
tt-rs-text = { path = "../tt-rs-text" }
tt-rs-box = { path = "../tt-rs-box" }
tt-rs-drag = { path = "../tt-rs-drag" }
tt-rs-ui = { path = "../tt-rs-ui" }
yew = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "DomTokenList"] }
log = { workspace = true }
wasm-logger = { workspace = true }
