[package]
name = "tt-rs-drag"
description = "tt-rs drag-and-drop interaction system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tt-rs-core = { path = "../tt-rs-core" }
yew = { workspace = true }
web-sys = { version = "0.3", features = ["HtmlElement", "DomTokenList"] }
wasm-bindgen = { workspace = true }
log = { workspace = true }
