[package]
name = "tt-rs-robot"
description = "Robot widget for tt-rs - trainable automation agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
yew = { workspace = true }
