[package]
name = "tt-rs-app"
description = "tt-rs WASM application entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
tt-rs-number = { path = "../../../widgets/crates/tt-rs-number" }
tt-rs-text = { path = "../../../widgets/crates/tt-rs-text" }
tt-rs-box = { path = "../../../widgets/crates/tt-rs-box" }
tt-rs-scales = { path = "../../../widgets/crates/tt-rs-scales" }
tt-rs-vacuum = { path = "../../../widgets/crates/tt-rs-vacuum" }
tt-rs-wand = { path = "../../../widgets/crates/tt-rs-wand" }
tt-rs-robot = { path = "../../../widgets/crates/tt-rs-robot" }
tt-rs-drag = { path = "../../../dnd/crates/tt-rs-drag" }
tt-rs-ui = { path = "../../../dnd/crates/tt-rs-ui" }
yew = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
