[package]
name = "tt-rs-app"
description = "tt-rs WASM application entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
tt-rs-number = { path = "../../../values/crates/tt-rs-number" }
tt-rs-text = { path = "../../../values/crates/tt-rs-text" }
tt-rs-bird = { path = "../../../containers/crates/tt-rs-bird" }
tt-rs-box = { path = "../../../containers/crates/tt-rs-box" }
tt-rs-nest = { path = "../../../containers/crates/tt-rs-nest" }
tt-rs-dropzone = { path = "../../../containers/crates/tt-rs-dropzone" }
tt-rs-scales = { path = "../../../comparison/crates/tt-rs-scales" }
tt-rs-vacuum = { path = "../../../tools/crates/tt-rs-vacuum" }
tt-rs-wand = { path = "../../../tools/crates/tt-rs-wand" }
tt-rs-robot = { path = "../../../agents/crates/tt-rs-robot" }
tt-rs-drag = { path = "../../../dnd/crates/tt-rs-drag" }
tt-rs-ui = { path = "../../../dnd/crates/tt-rs-ui" }
tt-rs-hit-test = { path = "../../../handlers/crates/tt-rs-hit-test" }
tt-rs-state = { path = "../../../state/crates/tt-rs-state" }
tt-rs-commands = { path = "../../../commands/crates/tt-rs-commands" }
yew = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
