[package]
name = "tt-rs-scales"
description = "Scales widget for tt-rs - comparison operations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
yew = { workspace = true }
