[package]
name = "tt-rs-box"
description = "tt-rs Box widget with holes for containing other widgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
yew = { workspace = true }

[dev-dependencies]
