[package]
name = "tt-rs-vacuum"
description = "Vacuum tool for tt-rs - erases values to create patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tt-rs-core = { path = "../../../core/crates/tt-rs-core" }
yew = { workspace = true }
